--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+# ========================
 # Miscellaneous
+# ========================
 *.class
 *.log
 *.pyc
@@ -12,34 +14,75 @@
 .swiftpm/
 migrate_working_dir/
 
-# IntelliJ related
+# ========================
+# IntelliJ / Android Studio
+# ========================
 *.iml
 *.ipr
 *.iws
 .idea/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
+# ========================
+# VS Code
+# ========================
+.vscode/
 
-# Flutter/Dart/Pub related
+# ========================
+# Flutter / Dart / Pub
+# ========================
 **/doc/api/
 **/ios/Flutter/.last_build_id
 .dart_tool/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-/build/
-/coverage/
+build/
+coverage/
 
-# Symbolication related
+# Symbolication / Obfuscation
 app.*.symbols
-
-# Obfuscation related
 app.*.map.json
 
-# Android Studio will place build artifacts here
+# Android Studio build artifacts
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# ========================
+# iOS / macOS
+# ========================
+ios/Flutter/Flutter.framework
+ios/Flutter/Flutter.podspec
+ios/Flutter/Generated.xcconfig
+ios/Pods/
+ios/Runner.xcworkspace
+ios/Runner/GeneratedPluginRegistrant.*
+
+# ========================
+# Node.js / NPM
+# ========================
+node_modules/
+package-lock.json
+npm-debug.log
+yarn-error.log
+yarn.lock
+
+# ========================
+# Web
+# ========================
+web/.dart_tool/
+web/.build/
+
+# ========================
+# Windows
+# ========================
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# ========================
+# Others
+# ========================
+*.bak
+*.tmp
+*.swp
