--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -1,29 +1,46 @@
-name: Build Flutter APK
+name: Flutter APK Build
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      # 1️⃣ Checkout your repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Setup Flutter
+      # 2️⃣ Set up JDK 17
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+
+      # 3️⃣ Set up Flutter
+      - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.35.7'
+          flutter-version: '3.13.0' # replace with your Flutter version
 
-      - name: Install dependencies
+      # 4️⃣ Get Flutter dependencies
+      - name: Flutter Pub Get
         run: flutter pub get
 
-      - name: Build release APK
+      # 5️⃣ Build release APK
+      - name: Build APK
         run: flutter build apk --release
 
+      # 6️⃣ Upload APK as artifact (optional)
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: release-apk
+          name: app-release.apk
           path: build/app/outputs/flutter-apk/app-release.apk
