--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -13,36 +13,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repo
       - uses: actions/checkout@v3
 
-      # 2️⃣ Set up JDK 17
+      # JDK 17
       - uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
 
-      # 3️⃣ Install Flutter 3.13 (or any >=3.9)
+      # Install Flutter 3.13 (Dart 3.9+)
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.13.0'
 
-      # 4️⃣ Disable Flutter analytics
+      # Disable analytics
       - run: flutter config --no-analytics
 
-      # 5️⃣ Upgrade Flutter to make sure Dart SDK matches
-      - run: flutter upgrade
-
-      # 6️⃣ Get dependencies
+      # Get dependencies
       - run: flutter pub get
 
-      # 7️⃣ Clean previous builds
+      # Clean previous builds
       - run: flutter clean
 
-      # 8️⃣ Build release APK
+      # Build release APK
       - run: flutter build apk --release
 
-      # 9️⃣ Upload APK artifact
+      # Upload APK
       - uses: actions/upload-artifact@v4
         with:
           name: app-release.apk
