--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -13,33 +13,42 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      # 1️⃣ Checkout your Flutter project
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      # Set JDK 17 for Gradle
-      - uses: actions/setup-java@v3
+      # 2️⃣ Set up Java 17 (required for Gradle 8+)
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
 
-      # Install Flutter 3.13 (Dart >= 3.9)
-      - uses: subosito/flutter-action@v2
+      # 3️⃣ Install Flutter 3.24 (latest stable, safest with Gradle 8.2)
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.13.0'
+          flutter-version: '3.24.0'
 
-      # Disable analytics (optional)
-      - run: flutter config --no-analytics
+      # 4️⃣ Disable analytics (optional, cleaner logs)
+      - name: Disable Flutter analytics
+        run: flutter config --no-analytics
 
-      # Get dependencies
-      - run: flutter pub get
+      # 5️⃣ Get dependencies
+      - name: Install dependencies
+        run: flutter pub get
 
-      # Clean old builds
-      - run: flutter clean
+      # 6️⃣ Clean old builds
+      - name: Clean previous builds
+        run: flutter clean
 
-      # Build release APK
-      - run: flutter build apk --release
+      # 7️⃣ Build release APK
+      - name: Build Flutter release APK
+        run: flutter build apk --release
 
-      # Upload APK artifact
-      - uses: actions/upload-artifact@v4
+      # 8️⃣ Upload the APK as an artifact
+      - name: Upload release APK
+        uses: actions/upload-artifact@v4
         with:
           name: app-release.apk
           path: build/app/outputs/flutter-apk/app-release.apk
