--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -24,11 +24,11 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      # 3️⃣ Install Flutter 3.24 (latest stable, safest with Gradle 8.2)
+      # 3️⃣ Install Flutter 3.27.0 (includes Dart 3.9.0)
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.0'
+          flutter-version: '3.27.0'
 
       # 4️⃣ Disable analytics (optional, cleaner logs)
       - name: Disable Flutter analytics
