--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout your Flutter project
+      # 1️⃣ Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -24,29 +24,33 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      # 3️⃣ Install Flutter 3.27.0 (includes Dart 3.9.0)
+      # 3️⃣ Set up Flutter 3.35.7 (includes Dart 3.9.0)
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.27.0'
+          flutter-version: '3.35.7'
 
-      # 4️⃣ Disable analytics (optional, cleaner logs)
+      # 4️⃣ Disable Flutter analytics (optional)
       - name: Disable Flutter analytics
         run: flutter config --no-analytics
 
-      # 5️⃣ Get dependencies
+      # 5️⃣ Check Flutter & Dart versions
+      - name: Flutter & Dart version check
+        run: flutter --version
+
+      # 6️⃣ Get dependencies
       - name: Install dependencies
         run: flutter pub get
 
-      # 6️⃣ Clean old builds
+      # 7️⃣ Clean old builds
       - name: Clean previous builds
         run: flutter clean
 
-      # 7️⃣ Build release APK
+      # 8️⃣ Build release APK
       - name: Build Flutter release APK
         run: flutter build apk --release
 
-      # 8️⃣ Upload the APK as an artifact
+      # 9️⃣ Upload release APK
       - name: Upload release APK
         uses: actions/upload-artifact@v4
         with:
