Remove fixed Java path in gradle.properties
Commented out the fixed Java path to allow Gradle to use JAVA_HOME.

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -29,4 +29,7 @@ kotlin.daemon.jvm.options=-Xmx2G
 # Speeds up Gradle dependency downloads
 systemProp.gradle.internal.repository.max.parallel.downloads=8
 
-org.gradle.java.home=C:\\Users\\Bilal\\AppData\\Local\\Programs\\Eclipse Adoptium\\jdk-21.0.8.9-hotspot
+# -----------------------------
+# Do NOT set a fixed Java path
+# Gradle will automatically use JAVA_HOME locally or runner Java on CI
+# org.gradle.java.home=C:\\Users\\Bilal\\AppData\\Local\\Programs\\Eclipse Adoptium\\jdk-21.0.8.9-hotspot
